<resources>

    <string name="app_name">영화 즐겨찾기</string>
    <string name="movie_search_favorites">영화검색 즐겨찾기</string>
    <string name="enter_search_term">검색어 입력</string>
    <string name="search">검색하기</string>
    <string name="home">홈</string>
    <string name="favorites">즐겨찾기</string>
    <string name="favorites_list">즐겨찾기 리스트</string>
    <string name="msg_result_search_term">입력한 검색어는 {%s} 입니다.\n영화 장르를 선택해주세요.</string>
    <string name="choose_a_genre">장르 선택</string>
    <string name="msg_result_select_country">선택한 장르는 {%s} 입니다.\n국가를 선택해주세요.</string>
    <string name="choose_country">국가 선택</string>
    <string name="information_summary_screen">정보 요약 화면</string>
    <string name="search_keyword_summary">- 입력한 검색어 : %s \n- 선택한 장르 : %s \n- 선택한 국가 : %s</string>
    <string name="entered_search_term">입력한 검색어</string>
    <string name="selected_genre">선택한 장르</string>
    <string name="selected_country">선택한 국가</string>
    <string name="search_for_movies">영화 검색하기</string>
    <string name="api_search_result_list">API 검색결과 리스트</string>
    <string name="are_you_sure_you_want_to_add_this_movie_to_your_favorites">이 영화를 즐겨찾기에\n추가하시겠습니까?</string>
    <string name="are_you_sure_you_want_to_delete_this_movie_to_your_favorites">이 영화를 즐겨찾기에\n삭제하시겠습니까?</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>

    <string name="genre_drama">드라마</string>
    <string name="genre_fantasy">판타지</string>
    <string name="genre_west">서부</string>
    <string name="genre_horror">공포</string>
    <string name="genre_romance">로맨스</string>
    <string name="genre_adventure">모험</string>
    <string name="genre_thriller">스릴러</string>
    <string name="genre_noir">느와르</string>
    <string name="genre_cult">컬트</string>
    <string name="genre_documentary">다큐멘터리</string>
    <string name="genre_comedy">코미디</string>
    <string name="genre_family">가족</string>
    <string name="genre_mystery">미스터리</string>
    <string name="genre_war">전쟁</string>
    <string name="genre_animation">애니메이션</string>
    <string name="genre_crime">범죄</string>
    <string name="genre_musical">뮤지컬</string>
    <string name="genre_sf">SF</string>
    <string name="genre_action">액션</string>
    <string name="genre_martial_arts">무협</string>
    <string name="genre_erotic">에로</string>
    <string name="genre_suspense">서스펜스</string>
    <string name="genre_epic">서사</string>
    <string name="genre_black_comedy">블랙코미디</string>
    <string name="genre_experiment">실험</string>
    <string name="genre_cartoon">영화카툰</string>
    <string name="genre_music">영화음악</string>
    <string name="genre_parody_poster">영화패러디포스터</string>

    <string name="country_korea">한국</string>
    <string name="country_japan">일본</string>
    <string name="country_united_states">미국</string>
    <string name="country_hong_kong">홍콩</string>
    <string name="country_uk">영국</string>
    <string name="country_france">프랑스</string>
    <string name="country_others">기타</string>

    <!--상의 할 부분-->
    <string name="do_not_exist_result_api">API 검색결과 목록이 존재하지 않습니다.\n화면을 클릭할 경우 홈 화면으로 이동합니다.</string>
    <string name="the_list_of_favorites_does_not_exist">즐겨찾기 목록이 존재하지 않습니다.\n홈 탭에서 영화검색 후 즐겨찾기를 추가해주세요.</string>
    <string name="favorite_movie_rating">평점 %s</string>
    <string name="favorite_movie_director">감독 %s</string>
    <string name="favorite_movie_actor">출연 정보 %s</string>
    <string name="please_enter_a_search_term">검색어를 입력해주세요.</string>
    <string name="confirm">확인</string>

</resources>