<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.home.MovieSearchFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleBarDefault"
        android:background="@color/primary_color"
        android:gravity="center"
        android:text="@string/movie_search_favorites"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editInputSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemHeightDefault"
        android:layout_marginHorizontal="@dimen/textMarginHorizontalDefault"
        android:hint="@string/enter_search_term"
        app:layout_constraintBottom_toTopOf="@id/btnSearchKeyword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnSearchKeyword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeightDefault"
        android:layout_marginHorizontal="@dimen/textMarginHorizontalDefault"
        android:layout_marginTop="@dimen/textMarginTopDefault"
        android:text="@string/search"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInputSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>